[gd_scene load_steps=20 format=3 uid="uid://dy5b0pg4paxvq"]

[ext_resource type="Script" path="res://scene/lvl/lvl_4.gd" id="1_pwecf"]
[ext_resource type="PackedScene" uid="uid://col2mcprvqhfj" path="res://scene/player/Player.tscn" id="2_gwvvh"]
[ext_resource type="PackedScene" uid="uid://vuiex7lsuucq" path="res://scene/props/door.tscn" id="3_jylsf"]
[ext_resource type="Texture2D" uid="uid://6u6x1wos1t12" path="res://texture/Untitled.png" id="4_00l3c"]
[ext_resource type="PackedScene" uid="uid://bybwlposuymxo" path="res://scene/map/void.tscn" id="4_obmpg"]
[ext_resource type="PackedScene" uid="uid://crjq6b5j1keyy" path="res://scene/props/spike.tscn" id="6_vhauq"]
[ext_resource type="PackedScene" uid="uid://cnm4eo181jdj0" path="res://scene/menu/pausemenu.tscn" id="7_d02dl"]
[ext_resource type="PackedScene" uid="uid://cxfe2j2rv846k" path="res://scene/map/cp.tscn" id="8_hq16d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1l44a"]
size = Vector2(53, 71.5)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hpria"]
texture = ExtResource("4_00l3c")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 19.5, 32, 19.5, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_jb7tq"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_hpria")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kbsbt"]
texture = ExtResource("4_00l3c")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_r3ljk"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_kbsbt")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ia0te"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fm1sh"]
size = Vector2(56, 56)

[sub_resource type="Animation" id="Animation_nboew"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pi3od"]
resource_name = "fade_in"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_sr27x"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4dm6y"]
_data = {
"RESET": SubResource("Animation_nboew"),
"fade_in": SubResource("Animation_pi3od"),
"fade_out": SubResource("Animation_sr27x")
}

[node name="lvl_4" type="Node2D"]
position = Vector2(1488, 384)
script = ExtResource("1_pwecf")

[node name="player" parent="." instance=ExtResource("2_gwvvh")]
position = Vector2(-440, 344)
scale = Vector2(2.55103, -0.88333)

[node name="door" parent="." instance=ExtResource("3_jylsf")]
position = Vector2(872, -325)

[node name="Area2D" type="Area2D" parent="door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door/Area2D"]
position = Vector2(3.5, -0.25)
shape = SubResource("RectangleShape2D_1l44a")

[node name="tile" type="TileMap" parent="."]
position = Vector2(8, 352)
tile_set = SubResource("TileSet_jb7tq")
format = 2
layer_0/tile_data = PackedInt32Array(-655366, 0, 0, -720901, 0, 0, -786436, 0, 0, -851973, 0, 0, -917510, 0, 0, -983047, 0, 0, -1048584, 0, 0, -1048585, 0, 0, -589829, 0, 0, -983041, 0, 0, -917505, 0, 0, -851969, 0, 0, -786433, 0, 0, -720897, 0, 0, -655361, 0, 0, -524289, 0, 0, -655362, 0, 0, -655367, 65536, 0, -655368, 65536, 0, -655369, 65536, 0, -655370, 65536, 0, -655371, 65536, 0, -655372, 65536, 0, -655375, 0, 0, -655378, 0, 0, -655385, 0, 0, -655384, 0, 0, -655383, 0, 0, -655382, 0, 0, -655381, 0, 0, -720917, 0, 0, -720921, 0, 0, -786457, 0, 0, -851993, 0, 0, -851992, 0, 0, -851991, 0, 0, -851990, 0, 0, -851989, 0, 0, -1048570, 0, 0, -983034, 0, 0, -917498, 0, 0, -851962, 0, 0, -786426, 0, 0, -720890, 0, 0, -655354, 0, 0, -589818, 0, 0, -786430, 0, 0, -786428, 0, 0, -655359, 0, 0, -589822, 0, 0, -589821, 0, 0, -589820, 0, 0, -655355, 0, 0, -1114106, 0, 0, -1179642, 196608, 3, -1048577, 0, 0, -1114113, 0, 0, -1245177, 196608, 3, -1310714, 0, 0, -1310713, 0, 0, -1310715, 0, 0, -655345, 0, 0, -655346, 0, 0, -655347, 0, 0, -786432, 0, 0, -1179649, 0, 0, -1245185, 0, 0, -1310721, 0, 0, -1376257, 0, 0, -1441793, 0, 0, -1507329, 0, 0, -1572864, 0, 0, -1572863, 0, 0, -1572862, 0, 0, -1572861, 0, 0, -1572860, 0, 0, -1572859, 0, 0, -1572858, 0, 0, -1572857, 0, 0, -1572856, 0, 0, -1507320, 0, 0, -1507319, 0, 0, -1441783, 0, 0, -1376247, 0, 0, -1310711, 0, 0, -917497, 0, 0, -917496, 0, 0, -917495, 0, 0)

[node name="void" parent="." instance=ExtResource("4_obmpg")]
position = Vector2(-48, -176)

[node name="hiddentile" type="TileMap" parent="."]
position = Vector2(840, 288)
tile_set = SubResource("TileSet_r3ljk")
format = 2
layer_0/tile_data = PackedInt32Array(-589840, 0, 0)

[node name="hiddenarea" type="Area2D" parent="hiddentile"]
position = Vector2(8, -144)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hiddentile/hiddenarea"]
position = Vector2(-1000, -464)
shape = SubResource("RectangleShape2D_ia0te")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hiddentile/hiddenarea"]
position = Vector2(-2340, -524)
shape = SubResource("RectangleShape2D_fm1sh")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4dm6y")
}

[node name="ColorRect" type="ColorRect" parent="anim"]
modulate = Color(1, 1, 1, 0)
offset_left = -3944.0
offset_top = -1200.0
offset_right = -3795.0
offset_bottom = -987.0
scale = Vector2(60.7714, 19.1838)
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="spike" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-568, -672)
rotation = -1.57079

[node name="spike2" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-504, -736)

[node name="spike3" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-120, -352)

[node name="spike4" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(136, -224)

[node name="spike5" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(8, -672)
rotation = 1.57079

[node name="spike27" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(8, -736)
rotation = 1.57079

[node name="spike28" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(8, -800)
rotation = 1.57079

[node name="spike6" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(8, -608)
rotation = 1.57079

[node name="spike7" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(8, -544)
rotation = 1.57079

[node name="spike8" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(8, -480)
rotation = 1.57079

[node name="spike9" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(72, -416)
rotation = 1.57079

[node name="spike12" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-696, -352)

[node name="spike16" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-632, -352)

[node name="spike17" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-568, -352)

[node name="spike10" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(8, -352)
rotation = 1.57079

[node name="spike11" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-312, -352)
rotation = 1.57079

[node name="spike14" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-56, -160)
rotation = 4.71238

[node name="spike15" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-184, -480)
rotation = 1.57079

[node name="spike13" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-248, -288)
rotation = 7.85397

[node name="spike18" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-1336, -544)
rotation = 6.28318

[node name="spike19" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-1528, -544)
rotation = 6.28318

[node name="spike20" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-1592, -544)
rotation = 6.28318

[node name="spike21" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-1400, -544)
rotation = 6.28318

[node name="spike22" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(-1464, -544)
rotation = 6.28318

[node name="spike23" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(392, -736)
rotation = 4.71238

[node name="spike24" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(392, -672)
rotation = 4.71238

[node name="spike25" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(392, -608)
rotation = 4.71238

[node name="spike26" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(392, -544)
rotation = 4.71238

[node name="spike29" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(840, -360)
rotation = 6.28318

[node name="spike30" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(840, -400)
rotation = 6.28318

[node name="spike31" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(768, -360)
rotation = 6.28318

[node name="spike32" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(768, -400)
rotation = 6.28318

[node name="spike33" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(768, -440)
rotation = 6.28318

[node name="spike34" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(840, -440)
rotation = 6.28318

[node name="spike35" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(768, -320)
rotation = 6.28318

[node name="spike36" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(768, -288)
rotation = 6.28318

[node name="spike37" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(912, -440)
rotation = 6.28318

[node name="spike38" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(912, -400)
rotation = 6.28318

[node name="spike39" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(912, -360)
rotation = 6.28318

[node name="spike40" parent="." instance=ExtResource("6_vhauq")]
position = Vector2(912, -320)
rotation = 6.28318

[node name="CanvasLayer" parent="." instance=ExtResource("7_d02dl")]

[node name="checkpoint" parent="." instance=ExtResource("8_hq16d")]
position = Vector2(341, -931)

[connection signal="body_entered" from="door/Area2D" to="." method="_on_area_2d_body_entered" flags=18]
[connection signal="body_exited" from="door/Area2D" to="." method="_on_area_2d_body_exited" flags=18]
[connection signal="body_entered" from="hiddentile/hiddenarea" to="." method="_on_hiddenarea_body_entered" flags=18]
[connection signal="body_exited" from="hiddentile/hiddenarea" to="." method="_on_hiddenarea_body_exited" flags=18]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished" flags=18]
